src/test/ui/impl-trait/issues/issue-86642.stderr
error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/issue-86642.rs:1:11
   |
LL | static x: impl Fn(&str) -> Result<&str, ()> = move |source| {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
